Partial_14Dec2021/force-app/main/default/objects/Plumber_club__c/Plumber_club__c.object-meta.xml
<CustomObject>
    <label>Plumber club</label>
    <nameField>
        <label>Plumber club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plumber club</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>