Partial_14Dec2021/force-app/main/default/objects/Plumber_club__c/fields/Coach_name_Club_owner__c.field-meta.xml
<CustomField>
    <fullName>Coach_name_Club_owner__c</fullName>
    <label>Coach name (Club owner)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>