Partial_14Dec2021/force-app/main/default/objects/Plumber_club__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plumber Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>