Partial_14Dec2021/force-app/main/default/objects/Plumber_club__c/fields/No_of_forms__c.field-meta.xml
<CustomField>
    <fullName>No_of_forms__c</fullName>
    <label>No of forms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>