Partial_14Dec2021/force-app/main/default/objects/Plumber_club__c/fields/Plumber_club_ID__c.field-meta.xml
<CustomField>
    <fullName>Plumber_club_ID__c</fullName>
    <label>Plumber club ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>