Partial_14Dec2021/force-app/main/default/objects/Plumber_club__c/fields/TGMs_name_Account_owner__c.field-meta.xml
<CustomField>
    <fullName>TGMs_name_Account_owner__c</fullName>
    <label>TGMs name (Account owner)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>